syntax = "proto3";

option go_package = "github.com/zhangjyr/distributed-notebook/common/driver";
option java_multiple_files = true;
option java_package = "com.github.zhangjyr.distributed-notebook.common.driver";
option java_outer_classname = "DriverProto";

package driver;

service DistributedNotebookCluster {
  // Return a list of all of the current kernel IDs.
  rpc ListKernels(Void) returns (ListKernelsResponse) {}

  rpc MigrateKernelReplica(JupyterKernelArg) returns (MigrateKernelResponse) {}
}

message MigrateKernelResponse {
  int32 success = 1; // 1 for success, 0 for failure.
}

// Used as an argument to RPC calls to refer to a specific kernel.
message JupyterKernelArg {
  string kernelId = 1;
  int32 replicaId = 2;
}

message DistributedJupyterKernel {
  string kernelId = 1;
  int32 numReplicas = 2;
  string status = 3;
  string aggregateBusyStatus = 4;
  repeated JupyterKernelReplica replicas = 5;
}

// Received as a response from RPC calls; contains additional info.
message JupyterKernelReplica {
  string kernelId = 1;
  int32 replicaId = 2;
  string podId = 3;
  string nodeId = 4;
}

message ListKernelsResponse {
  int32 numKernels = 1;
  repeated DistributedJupyterKernel kernels = 2;
}

message Void{}